--- a/app/style.scss
+++ b/app/style.scss
@@ -69,11 +69,9 @@
                 width: 30px;
                 margin: 5px;
             }
-            input{
+            #input_top{
                 width: 260px;
-                padding: 5px;
-                border-radius: 20px;
-                border: none;
+                
             }
         }
         .cart{
