--- a/app/style.scss
+++ b/app/style.scss
@@ -61,6 +61,7 @@
         justify-content: space-between;
         #input_top{
             width: 40%;
+            display: flex;
         }
         .cart{
             width: 20%;
